# Z-VulnSentinel

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  scan_deps.py  static-analysis-system.md  work.json
.github/workflows/: ci.yml
config/alloy/: config.alloy
config/loki/: loki.yaml
docs/: 01-system-overview.md  02-multi-backend-orchestration.md  03-backend-registry.md  04-result-merger.md  05-ai-integration.md  06-language-detection.md  07-analysis-pipeline.md  08-fbv2-integration.md  09-standalone-usage.md  10-roadmap.md  11-design-decisions.md  12-performance-benchmarks.md  api-graphstore.md  appendix-a-file-structure.md  appendix-b-configuration.md
docs/analyzer/: 01-system-overview.md  02-multi-backend-orchestration.md  03-backend-registry.md  06-language-detection.md  08-fbv2-integration.md  09-standalone-usage.md  10-roadmap.md  11-design-decisions.md  README.md  appendix-b-configuration.md
docs/refactor/: 01-mongodb-to-pg.md
docs/vulnsentinel/: 01-global-configuration.md  logging.md
frontend/: package-lock.json  package.json
scripts/: seed_libraries.py  start.sh
shared/agent/: __init__.py  base.py  context.py  llm_client.py
tests/: conftest.py  test_bitcode.py  test_cli.py  test_detector.py  test_fuzzer_parser.py  test_graph_store.py  test_locator.py  test_orchestrator.py  test_probe.py  test_progress.py  test_reachability.py  test_registry.py  test_snapshot_manager.py  test_svf_backend.py
tests/vulnsentinel/: conftest.py  test_api.py  test_auth_service.py  test_base_dao.py  test_client_vuln_dao.py  test_client_vuln_service.py  (+21 more)
vulnsentinel/: scheduler.py
work/: cm-delta-01.json  cm-full-01.json  cu-delta-01.json  cu-delta-02.json  cu-delta-03.json  cu-delta-04.json  cu-delta-05.json  cu-full-01.json  cu-full-02.json  lp-delta-01.json  lp-full-01.json  lp-full-02.json
z_code_analyzer/: __init__.py  api.py  cli.py  exceptions.py  graph_store.py  orchestrator.py  probe.py  progress.py  reachability.py  snapshot_manager.py  testing.py
(+221 files in other folders)
