[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "z-code-analyzer"
version = "0.1.0"
description = "Multi-backend static analysis engine for C/C++ call graph extraction"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "neo4j>=5.0",
    "pydantic>=2.0",
    "pymongo>=4.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
z-analyze = "z_code_analyzer.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
